--- a/length.html
+++ b/length.html
@@ -13,11 +13,11 @@
         <h1 style="text-decoration: none;">BN UnitCovertor</h1>
         </div> -->
 
-        <img src="assets/reset_button.png" class="clear" width="30" alt="">
+        <img src="Assets/reset_button.png" class="clear" width="30" alt="">
 
         <h1 style="display: inline;">Length</h1>
 
-        <img src="/assets/menu-icon.png" width="30" id="menu" alt="">
+        <img src="/Assets/menu-icon.png" width="30" id="menu" alt="">
 
         <div class="inner-container">
 
@@ -40,7 +40,7 @@
 
         </div>
 
-            <img src="assets/transfer-icon.png" class="tra" width="120" height="120"  alt="">
+            <img src="Assets/transfer-icon.png" class="tra" width="120" height="120"  alt="">
 
             <!-- RIGHT -->
 
