--- a/weight.html
+++ b/weight.html
@@ -9,11 +9,11 @@
 <body>
 
     <div class="container">
-        <img src="assets/reset_button.png" class="clear" width="30" alt="">
+        <img src="Assets/reset_button.png" class="clear" width="30" alt="">
 
         <h1 style="display: inline;">Weight</h1>
 
-        <img src="/assets/menu-icon.png" width="30" id="menu" alt="">
+        <img src="/Assets/menu-icon.png" width="30" id="menu" alt="">
 
         <div class="inner-container">
 
@@ -31,7 +31,7 @@
             </div>
 
 
-            <img src="assets/transfer-icon.png" class="tra" width="120" height="120"  alt="">
+            <img src="Assets/transfer-icon.png" class="tra" width="120" height="120"  alt="">
         
         <div class="box right">
             <select name="sfrom" class="Wsele" id="toWeightSelector">
