--- a/temperature.html
+++ b/temperature.html
@@ -13,7 +13,7 @@
         
         <h1 style="display: inline;">Temperature</h1>
 
-        <img src="/Assets/menu-icon.png" width="30" id="menu" alt="">
+        <img src="Assets/menu-icon.png" width="30" id="menu" alt="">
 
         <div class="inner-container">
 
