--- a/length.html
+++ b/length.html
@@ -17,7 +17,7 @@
 
         <h1 style="display: inline;">Length</h1>
 
-        <img src="Assets/menu-icon.png" width="30" id="menu" alt="">
+        <img src="Assets/menu-icon.png" width="30" class="menu" alt="">
 
         <div class="inner-container">
 
