--- a/weight.html
+++ b/weight.html
@@ -13,7 +13,7 @@
 
         <h1 style="display: inline;">Weight</h1>
 
-        <img src="Assets/menu-icon.png" width="30" id="menu" alt="">
+        <img src="Assets/menu-icon.png" width="30" class="menu" alt="">
 
         <div class="inner-container">
 
